# WifiJoiner-gtk

./: .gitignore  Makefile.am  Makefile.in  OneClickInstall.ymp  README  aclocal.m4  config.h  configure  configure.ac
RPM/: WifiJoiner-gtk.spec
debian/: README.Debian  README.source  changelog  control  copyright  rules
po/: Makefile.in
src/: Makefile.am  Makefile.in  WifiJoiner-gtk.ui  wifi-joiner  wifi-joiner.in  wifijoiner-gtk.desktop
src/icons/: Makefile.am  Makefile.in
src/icons/36x36/: Makefile.am  Makefile.in
src/icons/48x48/: Makefile.am  Makefile.in
src/icons/72x72/: Makefile.am  Makefile.in
